# platform-abstraction-layer

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/pal/: pal_config.h.in  pal_log.h  pal_semaphore.h  pal_status.h  pal_thread.h  pal_time.h  pal_types.h
scripts/: build.sh  document.sh  test.sh
source/: CMakeLists.txt
source/linux/: CMakeLists.txt  pal_log.c  pal_status.c  pal_thread.c
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  test_pal_status.c  test_pal_thread.c
