#-------------------------------------------------------------------------------
# Copyright (c) 2026 Abigail Goodwin. All right reserved.
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------
if (PAL_PLATFORM STREQUAL "linux")
    add_subdirectory(linux)
endif()